Using div.line with whitespace between elements that are allowed to wrap fixes the issues with Konqueror/Safari in b2edit. It also makes it xhtml valid. Still, using "white-space:nowrap" is not good IMHO. It's better to have a note wrap around than not being able to read it..

--- a/blogs/admin/skins/evo/rsc/css/sidebar.css
+++ b/blogs/admin/skins/evo/rsc/css/sidebar.css
@@ -47,13 +47,19 @@ fieldset.extracats div.extracats /* We'll need at least the same "deepness" as f
 	display: none;
 	color: #f00;
 }
+div.line,
 span.line
 {
 	white-space: normal;
 	display: block;
-	
 }
-span.line input
+/* blueyed>> this is ugly IMHO
+	- in Firefox the checkbox/radio is stretched;
+	- Konqueror does not make it wider (ok)
+	- Opera does also no stretching, but centers it
+	Is this really wanted?
+	The above alone is fine, IMHO - and does not consume two lines (label and input).line input
 {
 	width: 98%;
 }
+*/
