--- a/blogs/rsc/css/basic.css
+++ b/blogs/rsc/css/basic.css
@@ -31,6 +31,10 @@ code {
 {
 	white-space: nowrap;
 }
+div.line {
+	display:inline;
+	white-space: nowrap;
+}
 .left {
 	text-align: left;
 }
